--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ footer .logo {
   display: inline-block;
   color: #ffffff;
   font-size: 22px;
-  padding-top: 45px;
+  margin-top: 45px;
   padding-bottom: 0px;
   margin-bottom: 8px;
 }
@@ -202,11 +202,13 @@ footer .join {
   cursor: pointer;
   border: 1px transparent;
   min-width: 200px;
-  min-width: 50px;
+  min-height: 50px;
 }
 .button.main {
   color: #ffffff;
   background-color: var(--active-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 /*А нужна ли эта кнопка, если есть "просто кнопка" и "нажатая кнопка"? 
 .button.secondary {
@@ -245,6 +247,7 @@ footer .join {
   margin-bottom: 50px;
 }
 .item-title {
+  color: var(--additional-text-color);
   font-size: 14px;
   line-height: 0.87;
   text-transform: uppercase;
@@ -313,13 +316,28 @@ footer .join {
 .we-do .title {
   margin-bottom: 50px;
 }
+.we-do-item {
+  display: block;
+  position: relative;
+}
+.we-do .item-image {
+  display: block;
+  background-color: unset;
+}
 .we-do .item-title {
   font-size: 14px;
   text-align: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 27px;
+  padding-bottom: 27px;
   color: #ffffff;
   background-color: rgba(47, 48, 58, 0.8);
+
+  width: 100%;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+
+  margin: 0 auto;
 }
 
 /* Team */
@@ -379,17 +397,15 @@ footer .join {
   display: block;
 }
 .clients-item a {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   height: 90px;
   width: 170px;
-  text-align: center;
 }
-.clients-item img {
-  display: inline-block;
-  margin: 0 auto;
-}
+
 .clients-item a:hover,
 .clients-item a:focus {
   background-color: var(--active-color);
@@ -408,27 +424,73 @@ footer .join {
   list-style-type: none;
 }
 .filters-list {
+  display: flex;
+  justify-content: center;
   text-align: center;
+  margin-bottom: 50px;
+}
+.filters-item {
+  min-width: 73px;
+}
+.filters-item:not(:last-child) {
+  margin-right: 8px;
 }
 .our-works .button {
+  margin: 0;
+  padding: 6px 22px;
+  min-width: 73px;
+  min-height: 38px;
   letter-spacing: 0.03em;
   line-height: 1.62;
-  margin-right: 10px;
   cursor: pointer;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 }
 .shadow {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.our-works .button:hover {
+  background-color: #2196f3;
+}
+.works {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.works img {
+  display: block;
+}
+.works-item {
+  display: block;
+  width: 370px;
+  margin-bottom: 30px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+
+  position: relative;
+}
+
+.item-image {
+  background-color: rgba(33, 150, 243, 0.9);
+}
 .item-link {
   text-decoration: none;
 }
-
+/* .works-item .item-image {
+  margin-bottom: 20px;
+} */
+.item-info {
+  text-align: left;
+  padding: 20px 24px;
+}
 .our-works .item-title {
   color: var(--additional-text-color);
   font-size: 18px;
   line-height: 2;
   font-weight: 700;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 .filter-type {
   color: var(--main-text-color);
@@ -437,9 +499,26 @@ footer .join {
   font-weight: 400;
   letter-spacing: 0.03em;
 }
-/* Поменял цвет текста для его видимости */
-.item-description {
-  color: #c0bbbb;
+
+.our-works .item-description {
+  color: #ffffff;
   font-size: 18px;
   line-height: 1.56;
+  padding: 63px 24px;
+
+  position: absolute;
+  text-align: left;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+}
+
+.works-item:hover {
+  cursor: pointer;
+}
+.works-item:hover img {
+  opacity: 0.1;
+}
+.works-item:hover .item-description {
+  opacity: 1;
 }
