--- a/css/styles.css
+++ b/css/styles.css
@@ -464,11 +464,18 @@ footer .join {
   display: block;
   width: 370px;
   margin-bottom: 30px;
+  margin-right: 30px;
   background: #ffffff;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
   border-radius: 5px 5px 0px 0px;
 
   position: relative;
+}
+.works-item:nth-child(3n) {
+  margin-right: 0px;
+}
+.works-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
 }
 .works-item .item-title {
   text-transform: none;
