Fixed Home work
1. Заменил иконки соц сетей на правильные
1.1. Сделал для них правильный hover
2. Добавил иконки конверта и телефона в хедер
3. Изменил цвет текста заголовка Героя

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,14 @@ footer .container {
   display: flex;
   justify-content: space-between;
 }
-.social-item:hover,
-.social-item:focus {
+
+.social-item a {
+  display: block;
+  padding: 12px;
+  border-radius: 50%;
+}
+.social-item a:hover,
+.social-item a:focus {
   background-color: var(--active-color);
 }
 /* Button */
@@ -151,7 +157,13 @@ header a {
 .contacts-item:not(:last-child) {
   margin-right: 50px;
 }
+
+.contacts-item img {
+  display: inline;
+}
+
 .contacts-item a {
+  display: block;
   color: var(--main-text-color);
 }
 .contacts-item a:hover,
@@ -228,7 +240,7 @@ footer .social-item:not(:last-child) {
   background-color: slategray;
 }
 .hero-title {
-  color: lime;
+  color: #ffffff;
   font-size: 44px;
   line-height: 1.36;
   font-weight: 900;
